--- a/src/content/docs/book/part-1-instructions/2-data/5-reference/13-increment.mdx
+++ b/src/content/docs/book/part-1-instructions/2-data/5-reference/13-increment.mdx
@@ -6,7 +6,7 @@ sidebar:
 import CodeScroll from '/src/components/CodeScroll.astro'
 import CommmonLink from '/src/components/CommonLink.astro'
 
-To help further, C++ provides increment and decrement operators that allow you to add one, or subtract one, from a variable. You will find these options very useful when performing any kind of counting action.
+To help further, C++ provides increment and decrement operators that allow you to add one or subtract one, from a variable. You will find these options very useful when performing any kind of counting action.
 
 :::tip[Syntax]
 ![The C++ syntax for an assignment statement](./images/increment-decrement.png "The syntax for an assignment statement")
