Add C4 overview video

--- a/src/content/docs/book/part-1-instructions/3-control-flow/0-overview.mdx
+++ b/src/content/docs/book/part-1-instructions/3-control-flow/0-overview.mdx
@@ -3,8 +3,12 @@ title: "Overview"
 ---
 import { YouTube } from 'astro-embed';
 
+<div class="not-content">
+  <YouTube id="QuuKVKaNUQc" params="fs=1&modestbranding=1&rel=0"/>
+</div>
+
 So far we have seen how to build sequences of instructions and use these manipulate some simple data.
-Though our programs are limited to always performing the same steps.
+With these tools, our programs are limited to always performing the same steps.
 We need some new tools to allow us to respond to data in different ways.
 
 In the next part of the journey we will see how to take control of the sequence of instructions. This will greatly enhance what you can do with the computer, giving you the tools you need to start building much more interesting programs.
@@ -13,11 +17,11 @@ At the end of this trek, make sure you:
 
 - Continue to build on what you learnt in earlier chapters.
 - Can create programs that include:
-  - Boolean variables, and comparisons.
+  - Boolean variables and comparisons.
   - If and switch statements.
   - For, while, and do while loops.
 - Can design algorithms to achieve required outcomes.
 - Are able to explain the aspects of structured programming.
-- Demonstrate how the different statements work, and interact with values in memory.
-- Demonstrate how a given algorithm functions and explain the purpose of the control flow statements it is using.
+- Demonstrate how the different control flow statements work and interact with values in memory.
+- Demonstrate how a given algorithm functions, and explain the purpose of the control flow statements it is using.
 - Explain the role of comparisons and boolean data within control flow statements.
