--- a/src/content/docs/book/part-2-organised-code/1-structuring-code/0-overview.mdx
+++ b/src/content/docs/book/part-2-organised-code/1-structuring-code/0-overview.mdx
@@ -4,20 +4,16 @@ title: Overview
 import { YouTube } from 'astro-embed';
 
 <div class="not-content">
-  <YouTube id="FQuAHXD2bIc" params="fs=1&modestbranding=1&rel=0"/>
+  <YouTube id="35bRpF2K-04" params="fs=1&modestbranding=1&rel=0"/>
 </div>
 
-This part of the journey should really help make programming so much easier. With a few new tools, we can start to break down our code into smaller sections, meaning we do not have to keep so much logic in our heads all at once.
+This part of the journey should really help make programming so much easier.
+With a few new tools, we can start to break down our code into smaller sections, meaning we do not have to keep so much logic in our heads all at once.
+This will help us write more complex programs.
 
-If we think back to the change calculator, there was a lot of logic going on.
-This made it difficult to focus on different, smaller parts, one at a time.
-So, let's learn how to avoid that problem!
+At the end of this trek, make sure you:
 
-## Learning Goals
-
-At the end of this chapter you will be able to:
-
-- Explain the use of functions, procedures, and parameters in helping organise your code.
-- Create functions and procedures.
-- Use parameters to accept arguments from callers.
-- Return results from function calls.
+- Continue to build on what you learnt in earlier chapters.
+- Can explain the use of functions, procedures, and parameters in helping organise your code.
+- Create functions and procedures to organise your code.
+- Can use parameters to accept arguments from callers.
