Add C5 intro tour - global variables

--- a/src/content/docs/book/part-2-organised-code/1-structuring-code/2-intro-tour/00-procedures.mdx
+++ b/src/content/docs/book/part-2-organised-code/1-structuring-code/2-intro-tour/00-procedures.mdx
@@ -15,5 +15,6 @@ Watch this video to:
 
 - Get started writing procedures.
 - See how procedures can be used to organise code.
+- See how a procedure can use local variables.
 
 When you have gone through this video you should be able to write simple procedures of your own.
