Add warning to the manuall install page

--- a/src/content/docs/book/appendix/0-manual-installation/0-overview.mdx
+++ b/src/content/docs/book/appendix/0-manual-installation/0-overview.mdx
@@ -6,6 +6,13 @@ import { CardGrid } from "@astrojs/starlight/components";
 import Card from "../../../../../components/Card.astro";
 import LinkCard from "../../../../../components/LinkCard.astro";
 
+:::caution
+The following instructions are **manual** installation steps.
+You should only use these if you are particularly interested in seeing how everything works, or if you had problems with the automated installation.
+
+Otherwise, head over to the [automated install](/book/part-0-getting-started/1-building-programs/3-guided-tour/1-install/).
+:::
+
 :::tip[Supported Operating Systems]
 Click on one of the supported operating systems below to see more info about the setup guides available:
 
