Fix link in WSL install tip

--- a/src/content/docs/book/part-0-getting-started/1-building-programs/3-guided-tour/3-first-project.mdx
+++ b/src/content/docs/book/part-0-getting-started/1-building-programs/3-guided-tour/3-first-project.mdx
@@ -24,7 +24,7 @@ Most of our programming work can be undertaken in Visual Studio Code. We will be
     1. Open the VS Code Command Palette using Ctrl + Shift + P.
     2. Type **WSL** and select the `Connect to WSL` option.
 
-    If the option is not available make sure you have [WSL installed correctly](/book/part-0-getting-started/1-building-programs/3-guided-tour/1-install-os/2-5-setup-win-wsl), and the WSL extension for VS Code.
+    If the option is not available make sure you have [WSL installed correctly](/book/part-0-getting-started/1-building-programs/3-guided-tour/1-install-os/2-5-setup-win-wsl), and the [WSL extension for VS Code](/book/appendix/0-manual-installation/2-7-setup-vscode/#method-2-within-visual-studio-code-2).
     :::
 </Steps>
 
