--- a/src/content/docs/book/part-1-instructions/3-control-flow/0-overview.mdx
+++ b/src/content/docs/book/part-1-instructions/3-control-flow/0-overview.mdx
@@ -19,7 +19,7 @@ At the end of this trek, make sure you:
 - Can create programs that include:
   - Boolean variables and comparisons.
   - If and switch statements.
-  - For, while, and do while loops.
+  - While, and do while loops.
 - Can design algorithms to achieve required outcomes.
 - Are able to explain the aspects of structured programming.
 - Demonstrate how the different control flow statements work and interact with values in memory.
